[metadata]
name = evs
version = 0.1.0
author = Aleksei Lepekha
author_email = lepehaleha@bk.ru
description = Package for evaluation of video stabilization
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BLGALEX/stabilization-estimator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.8
install_requires =
    protobuf<=3.20.1
    tensorflow==2.8.0
    opencv-python==4.5.4.60
packages = find:
include_package_data = True